--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -2,7 +2,16 @@
 <div class="col-md-6 col-md-offset-3">
 
 <h1>Editing Book</h1>
-
+<% if @book.errors.any? %>
+<div class="alert alert-danger">
+	<h2><%= @book.errors.count %>error prohibited this obj from being saved:</h2>
+	<ul>
+		<% @book.errors.full_messages.each do |message| %>
+		<li><%= message %></li>
+		<% end %>
+	</ul>
+</div>
+<% end %>
 <%= render "books/newform", book: @book %>
 <%= link_to "Show", @book, class: "book_#{@book.id}" %>
 <%= link_to "Back", books_path, class: "back" %>
