--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,3 +1,4 @@
+<div class="container">
 <div class="row">
 	<div class="col-xs-3">
 
@@ -6,6 +7,16 @@
 		<!--メモ　右側の指定に注意。そこを間違えるとエラーが発生して表示されない -->
 
 		<h2>New book</h2>
+		<% if @book.errors.any? %>
+<div class="alert alert-danger">
+	<h2><%= @book.errors.count %>error prohibited this obj from being saved:</h2>
+	<ul>
+		<% @book.errors.full_messages.each do |message| %>
+		<li><%= message %></li>
+		<% end %>
+	</ul>
+</div>
+<% end %>
 		<%= render 'books/newform', book: @book %>
 
 	</div>
@@ -42,4 +53,5 @@
 
 
 	</div>
+</div>
 </div>
