--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -7,6 +7,16 @@
 <!--メモ　右側の指定に注意。そこを間違えるとエラーが発生して表示されない -->
 
 <h2>New book</h2>
+<% if @book.errors.any? %>
+<div class="alert alert-danger">
+	<h2><%= @book.errors.count %>error prohibited this obj from being saved:</h2>
+	<ul>
+		<% @book.errors.full_messages.each do |message| %>
+		<li><%= message %></li>
+		<% end %>
+	</ul>
+</div>
+<% end %>
 <%= render 'books/newform', book: @book %>
 </div>
 
