--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,6 +2,16 @@
 	<div class="row">
 	<div class="col-xs-3">
 		<h2>User info</h2>
+		<% if @user.errors.any? %>
+<div class="alert alert-danger">
+	<h2><%= @user.errors.count %>error prohibited this obj from being saved:</h2>
+	<ul>
+		<% @user.errors.full_messages.each do |message| %>
+		<li><%= message %></li>
+		<% end %>
+	</ul>
+</div>
+<% end %>
 		<%= render 'users/profile', user: @user %>
 		<!--同コントローラーのviewで表示ならusersは省略可 -->
 
